--- a/config/locales/views/reset_passwords/zh-CN.yml
+++ b/config/locales/views/reset_passwords/zh-CN.yml
@@ -1,12 +1,11 @@
-zh-CN:
+﻿zh-CN:
   reset_passwords:
     create:
-      success: 重置密码邮件已经发送至您的邮箱，请根据邮件内容进行操作。如未收到邮件，请到“垃圾邮箱”里找一下哦~ 或重新发送请求。
+      success: 重置密碼郵件已經發送至您的郵箱，請根據郵件內容進行操作。如未收到郵件，請到“垃圾郵箱”裡找一下哦~ 或重新發送請求。
     edit:
-      password: 请输入至少8位密码，并必须包含大写、小写字母与数字。
-      invalid: 无效的请求
+      password: 請輸入至少8位密碼，並必須包含大寫、小寫字母與數字。
+      invalid: 無效的請求
       submit: 重置登录密码
     update:
-      success: 登录密码已经重置，请妥善保管您的新密码。
-      invalid: 无效的请求
-
+      success: 登錄密碼已經重置，請妥善保管您的新密碼。
+      invalid: 無效的請求
