add taiwan banks~~^^

--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -161,20 +161,43 @@
   'no': 否
 
   banks:
-    cmbc: 台灣銀行
-    bc:   第一銀行
-    icbc: 中華郵政
-    cbc:  土地銀行
-    abc:  渣打銀行
-    cmb:  中國信託
-    cmbc: 合作金庫
-    bcm:  台新銀行
-    cncb: 中信銀行
-    hxb:  台中農會
-    cib:  新竹商銀
-    spdb: 上海商銀
-    bob: 台北銀行
-    ceb: 高雄銀行
-    sdb: 基隆一信
-    gdb: 玉山銀行
-    pab: 大眾銀行
+    004: 台灣銀行
+    005: 臺灣土地銀行
+    006: 合作金庫商業銀行
+    007: 第一商業銀行
+    008: 華南商業銀行
+    009: 彰化商業銀行
+    011: 合作金庫
+    012: 台新銀行
+    013: 中信銀行
+    017: 兆豐商銀
+    021: 花旗商銀 	
+    039: 澳盛商銀 	
+    016: 高雄銀行
+    050: 臺灣中小企業銀行
+    052: 渣打國際商業銀行
+    053: 台中商業銀行
+    054: 京城商業銀行
+    081: 滙豐商銀 	
+    101: 瑞興商銀
+    102: 華泰商銀
+    103: 臺灣新光商銀
+    108: 陽信商銀
+    118: 板信商銀行
+    147: 三信商業銀行
+    803: 聯邦商業銀行
+    805: 遠東國際商銀
+    806: 元大商銀
+    807: 永豐商銀
+    808: 玉山商銀
+    809: 萬泰商銀
+    810: 星展商業銀行 	
+    812: 台新商銀
+    814: 大眾商銀
+    815: 日盛國際商業銀行
+    816: 安泰商業銀行
+    822: 中國信託商業銀行
+    016: 中華開發工業銀行
+    048: 臺灣工業銀行
+    015: 中國輸出入銀行
+    018: 全國農業金庫
