--- a/config/locales/tickets/zh-TW.yml
+++ b/config/locales/tickets/zh-TW.yml
@@ -8,7 +8,7 @@ zh-TW:
       me: 我
       supporter: 客服
       close: 關閉申訴
-      close_succ: 申訴已關閉
+      close_succ: 案件已關閉
       close_confirm: 您確定要關閉這個申訴嗎？
       title_content_both_blank: 標題和描述至少要填寫一個哦！
       from: 來自
