--- a/config/locales/deposits/banks/en.yml
+++ b/config/locales/deposits/banks/en.yml
@@ -6,9 +6,6 @@ en:
       intro: Bank transfer deposits, Recommend for large recharge
       latency: 10 minutes
       transfer: Manual
-      receive_fund_holder: Wire transfer account holder
-      receive_fund_uid: Wire transfer account number
-      receive_fund_extra: Wire transfer bank name
       go: Deposit
 
   activerecord:
@@ -22,9 +19,6 @@ en:
         fund_extra_text: Fund Extra
         fund_uid: Fund Account
         holder: Holder
-        receive_fund_holder_text: Receiver holder
-        receive_fund_uid_text: Receiver account
-        receive_fund_extra_text: Receiver bank
         member_sn: Member SN
         amount: Amount
         sn: SN
@@ -52,6 +46,11 @@ en:
           fund_uid: Use existing bank account or enter a new account
           fund_extra: Select Bank
           submit: Submit
+        edit:
+          bank: Receive Bank Name
+          branch: Receive Bank Branch
+          hodler: Receive holder
+          account: Receive Account
 
   guides:
     private:
