--- a/config/locales/views/private/shared/zh-TW.yml
+++ b/config/locales/views/private/shared/zh-TW.yml
@@ -6,6 +6,6 @@
         balance: 餘額
         available: 可用
         title: "%{icon} %{c} 賬戶"
-        cny_format: '0.00'
+        twd_format: '0.00'
         btc_format: '0.00000000'
         total: 總額合計
